--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div data-color="royalBlue" style="background-color: #0d55c2" class="color"></div>
     </div>
 
+    <img src="/image/DesgnBoard.gif">
     <button class="clear">Limpar Quadro</button>
 
     <footer>Criado pela B7Web</footer>
